--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-book-store",
+  "name": "shop-nextjs-camp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "bootstrap": "^5.3.3",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0"
   }
 }
