--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
