--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
