--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
