--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
