--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
-    "react-loading-skeleton": "^3.5.0"
+    "react-loading-skeleton": "^3.5.0",
+    "react-multi-date-picker": "^4.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
