--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-date-object": "^2.1.9",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
