--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
@@ -18,6 +19,7 @@
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.3.0",
     "react-date-object": "^2.1.9",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
