--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-multi-date-picker": "^4.5.2",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
