--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
